# UHPC_test

./: CMakeLists.txt  README.md  affinity_test  localRun  omp_scaling_test  omp_scaling_test_results  output.txt
src/: CMakeLists.txt  heated_plate.cpp  heated_plate.h  main.cpp
