CMAKE_MINIMUM_REQUIRED(VERSION 3.13)
ADD_EXECUTABLE(main main.cpp)

ADD_LIBRARY(heated_plate heated_plate.cpp)
FIND_PACKAGE(OpenMP REQUIRED)
SET_TARGET_PROPERTIES(
    main
    PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/build

)
SET(CMAKE_BUILD_TYPE Debug)
TARGET_LINK_LIBRARIES(main heated_plate)
TARGET_LINK_LIBRARIES(heated_plate  OpenMP::OpenMP_CXX)
TARGET_INCLUDE_DIRECTORIES(main PUBLIC ${PROJECT_SOURCE_DIR})




